--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -14,7 +14,12 @@
    "id": "188b7e6145d42315"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-10T11:30:34.102706Z",
+     "start_time": "2025-11-10T11:30:34.092128Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "import numpy as np\n",
@@ -24,11 +29,25 @@
     "print(\"Pandas version:\", pd.__version__)"
    ],
    "id": "7b549a3fe4c7a06b",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy version: 2.3.3\n",
+      "Pandas version: 2.3.3\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-10T11:30:36.811425Z",
+     "start_time": "2025-11-10T11:30:36.765293Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# -------------------------------\n",
@@ -87,8 +106,22 @@
     "])"
    ],
    "id": "b94f5c7b981487c5",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- sensor_df (head) ---\n",
+      "  sensor_id           timestamp  temperature   humidity\n",
+      "0        S1 2025-11-01 00:00:00    11.844233  55.829533\n",
+      "1        S1 2025-11-01 00:10:00    13.162956  55.409148\n",
+      "2        S1 2025-11-01 00:20:00    10.544302  64.612578\n",
+      "3        S1 2025-11-01 00:30:00          NaN  63.473544\n",
+      "4        S1 2025-11-01 00:40:00    13.332673  63.221174\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -110,7 +143,12 @@
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-10T11:32:53.823801Z",
+     "start_time": "2025-11-10T11:32:53.797783Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# -------------------------------\n",
@@ -134,11 +172,45 @@
     "print(summary_by_sensor.xs('temperature', axis=1)[['mean', 'std']])"
    ],
    "id": "fe1f80f362ced9a5",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- summary_by_sensor (MultiIndex columns) ---\n",
+      "          temperature                                  humidity          \n",
+      "                 mean       std       min        max       mean       std\n",
+      "sensor_id                                                                \n",
+      "S1          16.718369  4.511676  8.552629  25.213955  59.259889  5.560005\n",
+      "S2          15.427998  4.497470  2.122613  24.023564  45.599224  5.493384\n",
+      "S3          15.658394  4.421943  7.273332  25.556400  56.385015  5.146519\n",
+      "S4          15.668049  4.238744  7.365955  24.204889  48.812680  5.493305\n",
+      "S5          17.801163  4.889507  9.133021  38.594542  49.913718  5.367881\n",
+      "\n",
+      "Columns levels: ['measurement', 'stat']\n",
+      "\n",
+      "Temperature means:\n",
+      "stat            mean       std\n",
+      "sensor_id                     \n",
+      "S1         16.718369  4.511676\n",
+      "S2         15.427998  4.497470\n",
+      "S3         15.658394  4.421943\n",
+      "S4         15.668049  4.238744\n",
+      "S5         17.801163  4.889507\n",
+      "S6         18.627710  4.633420\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-10T11:35:42.599323Z",
+     "start_time": "2025-11-10T11:35:42.583378Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "summary_by_sensor.columns = [\n",
@@ -150,8 +222,32 @@
     "print(summary_by_sensor.head())"
    ],
    "id": "6e3c22cd566ae71",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- summary_by_sensor (flat columns) ---\n",
+      "           temperature_mean  temperature_std  temperature_min  \\\n",
+      "sensor_id                                                       \n",
+      "S1                16.718369         4.511676         8.552629   \n",
+      "S2                15.427998         4.497470         2.122613   \n",
+      "S3                15.658394         4.421943         7.273332   \n",
+      "S4                15.668049         4.238744         7.365955   \n",
+      "S5                17.801163         4.889507         9.133021   \n",
+      "\n",
+      "           temperature_max  humidity_mean  humidity_std  \n",
+      "sensor_id                                                \n",
+      "S1               25.213955      59.259889      5.560005  \n",
+      "S2               24.023564      45.599224      5.493384  \n",
+      "S3               25.556400      56.385015      5.146519  \n",
+      "S4               24.204889      48.812680      5.493305  \n",
+      "S5               38.594542      49.913718      5.367881  \n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -162,6 +258,8 @@
     "# -------------------------------\n",
     "# We'll compute per-sensor and per-location aggregations using named aggregations\n",
     "sensor_with_meta = sensor_df.merge(meta, on='sensor_id', how='left')\n",
+    "\n",
+    "#LEFT = všechny hodnoty z levé tabulky ponechány (SQL joins)\n",
     "\n",
     "agg_named = sensor_with_meta.groupby(['location']).agg(\n",
     "temp_mean=('temperature', 'mean'),\n",
@@ -389,7 +487,7 @@
     "# boolean: temp increased >5C and humidity dropped >20 compared to previous measurement\n",
     "s2['temp_prev_diff'] = s2['temperature'] - s2['temperature'].shift(1)\n",
     "s2['hum_prev_diff'] = s2['humidity'].shift(1) - s2['humidity']\n",
-    "s2['extreme_change'] = (s2['temp_prev_diff'] > 5) & (s2['hum_prev_diff'] > 20)"
+    "s2['extreme_change'] = (s2['temp_prev_diff'] < -5) | (s2['hum_prev_diff'] > 20)"
    ],
    "id": "7638ea773b4b25ad",
    "outputs": [],
