--- a/assignment5.ipynb
+++ b/assignment5.ipynb
@@ -1471,7 +1471,7 @@
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
     "\n",
     "#Setting the logarithmic scale on y-axis\n",
-    "ax.set_yscale('log')\n",
+    "ax.set_yscale(\"log\")\n",
     "\n",
     "#Plotting the mean +- std\n",
     "ax.axhline(global_mean, color=\"black\", linestyle=\"-\")\n",
